# TetrisExcerciseMachina

./: .gitignore  CMakeLists.txt  TetrisExcercise.sln
TetrisExcercise/: BlueRicky.cpp  BlueRicky.h  ClevelandZ.cpp  ClevelandZ.h  Config.h  Game.cpp  Game.h  Grid.cpp  Grid.h  IShape.cpp  IShape.h  Matrix4x4.cpp  Matrix4x4.h  OrangeRicky.h  Shared_ptr.h  Teewee.h  TetrisExcercise.vcxproj  TetrisExcercise.vcxproj.filters  Vector2.cpp  main.cpp
entry/: CMakeLists.txt
headers/: BlueRicky.h  CMakeLists.txt  ClevelandZ.h  Game.h  Hero.h  IShape.h  RhodeIslandZ.h  Smashboy.h  Vector2.h
sources/: CMakeLists.txt  ClevelandZ.cpp  Grid.cpp  Hero.cpp  OrangeRicky.cpp  RhodeIslandZ.cpp  Smashboy.cpp  Teewee.cpp
x64/Debug/: TetrisExcercise.ilk
